update: hibernate auto-creates database on startup - using local SQLDialect - added repo for User - Test: add User with url /user/username/password

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-#Database
-spring.datasource.url=jdbc:sqlite:reservations.db
+spring.jpa.database-platform=com.github.ewanme.romresbot.dialect.SQLDialect
+spring.jpa.hibernate.ddl-auto=update
+ 
+spring.datasource.url = jdbc:sqlite:reservations.db
+spring.datasource.driver-class-name = org.sqlite.JDBC
+ 
+spring.datasource.username = admin
+spring.datasource.password = admin
