--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,10 @@
+### General ###
+*target*
+*.jar
+*.war
+*.ear
+*.class
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -31,3 +38,26 @@ build/
 
 ### VS Code ###
 .vscode/
+/bin/
+
+### Eclipse ###
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
